<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:sharedPreferenceName="front_camera"
  xmlns:camera="http://schemas.android.com/apk/res/com.lge.camera">
    <ListPreference camera:key="@string/key_swap" camera:title="@string/dual_camera_select" camera:menuIcons="@array/swap_menuIcons" camera:menuCommand="com.lge.camera.command.SwapCamera" camera:entryCommand="com.lge.camera.command.setting.SetCameraMode" camera:defaultValue="back" camera:entries="@array/swap_entries" camera:persist="false" />
    <ListPreference camera:key="@string/key_voiceshutter" camera:title="@string/sp_voiceshutter_NORMAL" camera:menuViewId="@id/submenu_2_item" camera:menuIcons="@array/camera_voiceshutter_menuIcons" camera:menuCommand="com.lge.camera.command.ShowVoiceShutterSubMenu" camera:entryCommand="com.lge.camera.command.SetVoiceShutterMode" camera:defaultValue="off" camera:entries="@array/camera_voiceshutter_entries" camera:entryValues="@array/camera_voiceshutter_entryValues" camera:entryIcons="@array/camera_voiceshutter_entryIcons" camera:entryViewIds="@array/camera_voiceshutter_entryViewIds" />
    <ListPreference camera:key="@string/key_brightness" camera:title="@string/brightness" camera:menuIcons="@array/brightness_menuIcons" camera:menuCommand="com.lge.camera.command.ShowBrightness" camera:entryCommand="com.lge.camera.command.setting.SetBrightness" camera:defaultValue="6" camera:persist="false" />
    <ListPreference camera:key="@string/key_beautyshot" camera:title="@string/shot_mode_beauty" camera:menuIcons="@array/beautyshot_menuIcons" camera:menuCommand="com.lge.camera.command.ShowBeautyshot" camera:entryCommand="com.lge.camera.command.setting.SetBeautyshot" camera:defaultValue="4" />
    <ListPreference camera:key="@string/key_setting" camera:title="@string/settings" camera:menuIcons="@array/settings_menuIcons" camera:menuCommand="com.lge.camera.command.ShowSettingMenu" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_picturesize" camera:title="@string/image_size" camera:menuIcons="@array/camera_pictureSize_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraImageSize" camera:defaultValue="1280x960" camera:entries="@array/iproject_front_camera_pictureSize_entries" camera:entryValues="@array/iproject_front_camera_pictureSize_entryValues" camera:indicatorIcons="@array/iproject_front_camera_pictureSize_indicatorIcons" camera:extraInfos="@array/iproject_front_camera_pictureSize_extraInfos_postview_sample_size" camera:extraInfos2="@array/iproject_front_camera_pictureSize_extraInfos_preview_size" camera:extraInfos3="@array/iproject_front_camera_pictureSize_extraInfos_previewSizeOnScreen" />
    <ListPreference camera:key="@string/key_scene_mode" camera:title="@string/scene_mode" camera:menuIcons="@array/sceneMode_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetSceneMode" camera:defaultValue="auto" camera:entries="@array/scene_mode_front_entries" camera:entryValues="@array/scene_modes_front_entryValues" camera:indicatorIcons="@array/sceneMode_front_indicatorIcons" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_whitebalance" camera:title="@string/white_balance" camera:menuIcons="@array/camera_whiteBalance_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraWhiteBalance" camera:defaultValue="auto" camera:entries="@array/pref_camera_whitebalance_entries" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_coloreffect" camera:title="@string/color_effect" camera:menuIcons="@array/colorEffect_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraColorEffect" camera:defaultValue="none" camera:entries="@array/colorEffect_entries" camera:entryValues="@array/colorEffect_entryValues" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_timer" camera:title="@string/timer" camera:menuIcons="@array/camera_timer_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraTimer" camera:defaultValue="0" camera:entries="@array/camera_timer_entries" camera:entryValues="@array/camera_timer_entryValues" camera:indicatorIcons="@array/camera_timer_indicatorIcons" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_tag_location" camera:title="@string/geo_tagging" camera:menuIcons="@array/camera_tag_location_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraGeoTag" camera:defaultValue="off" camera:entries="@array/camera_tag_location_entries" camera:entryValues="@array/camera_tag_location_entryValues" camera:indicatorIcons="@array/camera_tag_location_indicatorIcons" />
    <ListPreference camera:key="@string/key_save_direction" camera:title="@string/sp_save_as_flipped_NORMAL" camera:menuIcons="@array/camera_setting_save_direction_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetSaveDirectionMode" camera:defaultValue="on" camera:entries="@array/I20_camera_save_as_flipped_entries" camera:entryValues="@array/I20_camera_save_as_flipped_entryValues" />
    <ListPreference camera:key="@string/key_camera_shutter_sound" camera:title="@string/shutter_sound" camera:menuIcons="@array/camera_shutter_sound_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraShutterSound" camera:defaultValue="0" camera:entries="@array/camera_shutter_sound_entries" camera:entryValues="@array/camera_shutter_sound_entryValues" />
    <ListPreference camera:key="@string/key_camera_auto_review" camera:title="@string/auto_review" camera:menuIcons="@array/camera_auto_review_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraShowCapturedImage" camera:defaultValue="off" camera:entries="@array/camera_auto_review_entries" camera:entryValues="@array/camera_auto_review_entryValues" />
    <ListPreference camera:key="@string/key_restore" camera:title="@string/reset" camera:menuIcons="@array/restore_menuIcons" />
    <ListPreference camera:key="@string/key_help_guide" camera:title="@string/help_title" camera:menuIcons="@array/help_guide_menuIcons" camera:entryCommand="com.lge.camera.command.ShowHelpGuidePopup" camera:defaultValue="not found" camera:entries="@array/iproject_front_camera_help_entries" camera:entryValues="@array/iproject_front_camera_help_entryValues" />
</PreferenceGroup>
