<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:sharedPreferenceName="front_camcorder"
  xmlns:camera="http://schemas.android.com/apk/res/com.lge.camera">
    <ListPreference camera:key="@string/key_swap" camera:title="@string/dual_camera_select" camera:menuIcons="@array/swap_menuIcons" camera:menuCommand="com.lge.camera.command.SwapCamera" camera:entryCommand="com.lge.camera.command.setting.SetCameraMode" camera:defaultValue="back" camera:entries="@array/swap_entries" camera:persist="false" />
    <ListPreference camera:key="@string/key_zoom" camera:title="@string/zoom" camera:menuIcons="@array/zoom_menuIcons" camera:menuCommand="com.lge.camera.command.ShowZoom" camera:entryCommand="com.lge.camera.command.setting.SetZoom" camera:defaultValue="0" camera:persist="false" />
    <ListPreference camera:key="@string/key_brightness" camera:title="@string/brightness" camera:menuIcons="@array/brightness_menuIcons" camera:menuCommand="com.lge.camera.command.ShowBrightness" camera:entryCommand="com.lge.camera.command.setting.SetBrightness" camera:defaultValue="6" camera:persist="false" />
    <ListPreference camera:key="@string/key_live_effect" camera:menuIcons="@array/camcorder_liveeffect_menuIcons" camera:menuCommand="com.lge.camera.command.ShowLiveEffectSubMenu" camera:entryCommand="com.lge.camera.command.setting.SetLiveEffect" camera:defaultValue="off" camera:entries="@array/camcorder_liveeffect_entries" camera:entryValues="@array/camcorder_liveeffect_entryValues" camera:persist="false" />
    <ListPreference camera:key="@string/key_setting" camera:title="@string/settings" camera:menuIcons="@array/settings_menuIcons" camera:menuCommand="com.lge.camera.command.ShowSettingMenu" camera:persist="false" />
    <ListPreference camera:key="@string/key_preview_size_on_device" camera:title="@string/video_size" camera:menuIcons="@array/l1_att_front_video_size_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetVideoImageSize" camera:defaultValue="1280x720" camera:entries="@array/l1_att_front_video_size_entries" camera:entryValues="@array/l1_att_front_video_size_entryValues" camera:indicatorIcons="@array/l1_att_front_video_size_indicatorIcons" camera:extraInfos="@array/l1_att_front_video_size_extraInfos_previewSizeOnScreen" camera:extraInfos2="@array/l1_att_front_video_size_extraInfos_bitrate" />
    <ListPreference camera:key="@string/key_camera_whitebalance" camera:title="@string/white_balance" camera:menuIcons="@array/camera_whiteBalance_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraWhiteBalance" camera:defaultValue="auto" camera:entries="@array/pref_camera_whitebalance_entries" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_coloreffect" camera:title="@string/color_effect" camera:menuIcons="@array/colorEffect_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraColorEffect" camera:defaultValue="none" camera:entries="@array/colorEffect_entries" camera:entryValues="@array/colorEffect_entryValues" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_tag_location" camera:title="@string/sp_geotagging_NORMAL" camera:menuIcons="@array/camera_tag_location_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraGeoTag" camera:defaultValue="off" camera:entries="@array/camera_tag_location_entries" camera:entryValues="@array/camera_tag_location_entryValues" camera:indicatorIcons="@array/camera_tag_location_indicatorIcons" />
    <ListPreference camera:key="@string/key_video_audio_recording" camera:title="@string/video_voice" camera:menuIcons="@array/video_audioRecording_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetVideoVoice" camera:defaultValue="unmute" camera:entries="@array/video_audioRecording_entries" camera:entryValues="@array/video_audioRecording_entryValues" camera:indicatorIcons="@array/video_audioRecording_indicatorIcons" camera:persist="false" />
    <ListPreference camera:key="@string/key_video_auto_review" camera:title="@string/show_recorded_video" camera:menuIcons="@array/video_autoReview_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetVideoShowRecordedVideo" camera:defaultValue="off" camera:entries="@array/video_autoReview_entries" camera:entryValues="@array/video_autoReview_entryValues" />
    <ListPreference camera:key="@string/key_storage" camera:title="@string/sp_storage_NORMAL" camera:menuIcons="@array/camera_storage_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetStorage" camera:defaultValue="external memory" camera:entries="@array/camera_storage_entries" camera:entryValues="@array/camera_storage_entryValues" camera:indicatorIcons="@array/camera_storage_indicatorIcons" />
    <ListPreference camera:key="@string/key_restore" camera:title="@string/reset" camera:menuIcons="@array/restore_menuIcons" />
    <ListPreference camera:key="@string/key_help_guide" camera:title="@string/sp_help_video_title_NORMAL" camera:menuIcons="@array/help_guide_menuIcons" camera:entryCommand="com.lge.camera.command.ShowHelpGuidePopup" camera:defaultValue="not found" camera:entries="@array/l1_att_front_camcorder_help_entries" camera:entryValues="@array/l1_att_front_camcorder_help_entryValues" />
</PreferenceGroup>
