<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup camera:sharedPreferenceName="back_camera"
  xmlns:camera="http://schemas.android.com/apk/res/com.lge.camera">
    <ListPreference camera:key="@string/key_swap" camera:title="@string/dual_camera_select" camera:menuIcons="@array/swap_menuIcons" camera:menuCommand="com.lge.camera.command.SwapCamera" camera:entryCommand="com.lge.camera.command.setting.SetCameraMode" camera:defaultValue="back" camera:entries="@array/swap_entries" camera:persist="false" />
    <ListPreference camera:key="@string/key_voiceshutter" camera:title="@string/sp_voiceshutter_NORMAL" camera:menuViewId="@id/submenu_2_item" camera:menuIcons="@array/camera_voiceshutter_menuIcons" camera:menuCommand="com.lge.camera.command.ShowVoiceShutterSubMenu" camera:entryCommand="com.lge.camera.command.SetVoiceShutterMode" camera:defaultValue="off" camera:entries="@array/camera_voiceshutter_entries" camera:entryValues="@array/camera_voiceshutter_entryValues" camera:entryIcons="@array/camera_voiceshutter_entryIcons" camera:entryViewIds="@array/camera_voiceshutter_entryViewIds" />
    <ListPreference camera:key="@string/key_time_machine" camera:title="@string/sp_shot_mode_time_machine_NORMAL" camera:menuViewId="@id/submenu_2_item" camera:menuIcons="@array/camera_time_machine_menuIcons" camera:menuCommand="com.lge.camera.command.ShowTimeMachineSubMenu" camera:entryCommand="com.lge.camera.command.SetTimeMachineMode" camera:defaultValue="off" camera:entries="@array/camera_time_machine_entries" camera:entryValues="@array/camera_time_machine_entryValues" camera:entryIcons="@array/camera_time_machine_entryIcons" camera:entryViewIds="@array/camera_time_machine_entryViewIds" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_shot_mode" camera:title="@string/shot_mode" camera:menuViewId="@id/submenu_4_item" camera:menuIcons="@array/I20_camera_shot_mode_menuIcons" camera:menuCommand="com.lge.camera.command.ShowShotModeSubMenu" camera:entryCommand="com.lge.camera.command.setting.SetCameraShotMode" camera:defaultValue="shotmode_normal" camera:entries="@array/I20_camera_shot_mode_entries" camera:entryValues="@array/I20_camera_shot_mode_entryValues" camera:entryIcons="@array/I20_camera_shot_mode_entryIcons" camera:entryViewIds="@array/I20_camera_shot_mode_entryViewIds" camera:extraInfos="@array/j1_camera_shot_mode_extraInfos_preview_size" camera:persist="false" camera:extraInfos2="@array/j1_camera_shot_mode_extraInfos_previewSizeOnScreen" camera:extraInfos3="@array/j1_camera_shot_mode_extraInfos_change_size_message" />
    <ListPreference camera:key="@string/key_setting" camera:title="@string/settings" camera:menuIcons="@array/settings_menuIcons" camera:menuCommand="com.lge.camera.command.ShowSettingMenu" camera:persist="false" />
    <ListPreference camera:key="@string/key_flash" camera:title="@string/flash" camera:menuIcons="@array/I20_camera_flash_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetFlashMode" camera:defaultValue="off" camera:entries="@array/camera_flash_entries" camera:entryValues="@array/camera_flash_entryValues" camera:indicatorIcons="@array/I20_camera_flash_indicatorIcons" camera:persist="true" />
    <ListPreference camera:key="@string/key_brightness" camera:title="@string/brightness" camera:menuIcons="@array/brightness_settingMenuIcons" camera:menuCommand="com.lge.camera.command.ShowBrightness" camera:entryCommand="com.lge.camera.command.setting.SetBrightness" camera:defaultValue="6" camera:persist="false" />
    <ListPreference camera:key="@string/key_focus" camera:title="@string/focus" camera:menuViewId="@id/submenu_2_item" camera:menuIcons="@array/j1_camera_focus_menuIcons" camera:menuCommand="com.lge.camera.command.ShowFocusSubMenu" camera:entryCommand="com.lge.camera.command.setting.SetCameraFocusMode" camera:defaultValue="auto" camera:entries="@array/camera_focus_entries" camera:entryValues="@array/camera_focus_entryValues" camera:entryIcons="@array/camera_focus_entryIcons" camera:entryViewIds="@array/camera_focus_entryViewIds" camera:indicatorIcons="@array/camera_focus_indicatorIcons" />
    <ListPreference camera:key="@string/key_camera_picturesize" camera:title="@string/image_size" camera:menuIcons="@array/camera_pictureSize_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraImageSize" camera:defaultValue="3264x2448" camera:entries="@array/j1_camera_pictureSize_entries" camera:entryValues="@array/j1_camera_pictureSize_entryValues" camera:indicatorIcons="@array/j1_camera_pictureSize_indicatorIcons" camera:extraInfos="@array/j1_camera_pictureSize_extraInfos_postview_sample_size" camera:extraInfos2="@array/j1_camera_pictureSize_extraInfos_preview_size" camera:extraInfos3="@array/j1_camera_pictureSize_extraInfos_previewSizeOnScreen" />
    <ListPreference camera:key="@string/key_scene_mode" camera:title="@string/scene_mode" camera:menuIcons="@array/I20_sceneMode_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetSceneMode" camera:defaultValue="auto" camera:entries="@array/I20_scene_mode_entries" camera:entryValues="@array/I20_scene_modes_entryValues" camera:indicatorIcons="@array/I20_sceneMode_indicatorIcons" camera:persist="false" />
    <ListPreference camera:key="@string/key_iso" camera:title="@string/iso" camera:menuIcons="@array/iso_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraIso" camera:defaultValue="auto" camera:entries="@array/iso_entries" camera:entryValues="@array/iso_entryValues" />
    <ListPreference camera:key="@string/key_camera_whitebalance" camera:title="@string/white_balance" camera:menuIcons="@array/camera_whiteBalance_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraWhiteBalance" camera:defaultValue="auto" camera:entries="@array/pref_camera_whitebalance_entries" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_coloreffect" camera:title="@string/color_effect" camera:menuIcons="@array/colorEffect_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraColorEffect" camera:defaultValue="none" camera:entries="@array/colorEffect_entries" camera:entryValues="@array/colorEffect_entryValues" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_timer" camera:title="@string/timer" camera:menuIcons="@array/camera_timer_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraTimer" camera:defaultValue="0" camera:entries="@array/camera_timer_entries" camera:entryValues="@array/camera_timer_entryValues" camera:indicatorIcons="@array/camera_timer_indicatorIcons" camera:persist="false" />
    <ListPreference camera:key="@string/key_camera_tag_location" camera:title="@string/sp_geotagging_NORMAL" camera:menuIcons="@array/camera_tag_location_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraGeoTag" camera:defaultValue="off" camera:entries="@array/camera_tag_location_entries" camera:entryValues="@array/camera_tag_location_entryValues" camera:indicatorIcons="@array/camera_tag_location_indicatorIcons" />
    <ListPreference camera:key="@string/key_camera_shutter_sound" camera:title="@string/shutter_sound" camera:menuIcons="@array/camera_shutter_sound_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraShutterSound" camera:defaultValue="0" camera:entries="@array/camera_shutter_sound_entries" camera:entryValues="@array/camera_shutter_sound_entryValues" />
    <ListPreference camera:key="@string/key_camera_auto_review" camera:title="@string/auto_review" camera:menuIcons="@array/camera_auto_review_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetCameraShowCapturedImage" camera:defaultValue="off" camera:entries="@array/camera_auto_review_entries" camera:entryValues="@array/camera_auto_review_entryValues" />
    <ListPreference camera:key="@string/key_storage" camera:title="@string/sp_storage_NORMAL" camera:menuIcons="@array/camera_storage_menuIcons" camera:entryCommand="com.lge.camera.command.setting.SetStorage" camera:defaultValue="external memory" camera:entries="@array/camera_storage_entries" camera:entryValues="@array/camera_storage_entryValues" camera:indicatorIcons="@array/camera_storage_indicatorIcons" />
    <ListPreference camera:key="@string/key_restore" camera:title="@string/reset" camera:menuIcons="@array/restore_menuIcons" />
    <ListPreference camera:key="@string/key_help_guide" camera:title="@string/help_title" camera:menuIcons="@array/help_guide_menuIcons" camera:entryCommand="com.lge.camera.command.ShowHelpGuidePopup" camera:defaultValue="not found" camera:entries="@array/j1_back_camera_help_entries" camera:entryValues="@array/j1_back_camera_help_entryValues" />
    <ListPreference camera:key="@string/key_zoom" camera:title="@string/zoom" camera:menuIcons="@array/zoom_menuIcons" camera:menuCommand="com.lge.camera.command.ShowZoom" camera:entryCommand="com.lge.camera.command.setting.SetZoom" camera:defaultValue="0" camera:persist="false" />
</PreferenceGroup>
